@@ -31,8 +31,8 @@ import java.util.Map;
 import java.util.stream.Collectors;
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
-import net.dv8tion.jda.api.interactions.commands.build.CommandData;
 import net.dv8tion.jda.api.interactions.commands.build.Commands;
+import net.dv8tion.jda.api.interactions.commands.build.SlashCommandData;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -48,7 +48,7 @@ public class RecipeSlashCommand extends SlashCommand {
 				.stream()
 				.filter(e -> higherDepth(e.getValue(), "recipe") != null)
 				.map(Map.Entry::getKey)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	@Override
@@ -57,7 +57,7 @@ public class RecipeSlashCommand extends SlashCommand {
 	}
 
 	@Override
-	public CommandData getCommandData() {
+	public SlashCommandData getCommandData() {
 		return Commands.slash(name, "Get the crafting recipe of an item").addOption(OptionType.STRING, "item", "Item name", true, true);
 	}
 
