@@ -1771,11 +1771,7 @@ public class SettingsExecute {
 					FuzzySearch
 						.extractTop(
 							roleValue,
-							getInternalJsonMappings()
-								.entrySet()
-								.stream()
-								.map(e -> higherDepth(e.getValue(), "name", ""))
-								.collect(Collectors.toList()),
+							getInternalJsonMappings().entrySet().stream().map(e -> higherDepth(e.getValue(), "name", "")).toList(),
 							5
 						)
 						.stream()
@@ -2360,7 +2356,7 @@ public class SettingsExecute {
 	}
 
 	public EmbedBuilder searchBlacklist(String username) {
-		List<JsonElement> blacklist = streamJsonArray(guildMap.get(guild.getId()).getBlacklist()).collect(Collectors.toList());
+		List<JsonElement> blacklist = streamJsonArray(guildMap.get(guild.getId()).getBlacklist()).toList();
 		if (blacklist.isEmpty()) {
 			return invalidEmbed("Blacklist is empty");
 		}
